fix router outlets causing overflow problems. Some styling

--- a/src/views/AdvancedQueryView/AdvancedQueryView.scss
+++ b/src/views/AdvancedQueryView/AdvancedQueryView.scss
@@ -2,7 +2,6 @@
   text-align: center;
   margin: auto;
   width: 80vw;
-  height: 100%;
   vertical-align: middle;
 
   #adv-title {
